Add Function Assign Task from manager View Task From employee

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="create_appointment">Create Appointment</string>
     <string name="my_appointment">My Appointment</string>
     <string name="Employee">Employee Details</string>
+    <string name="Task">Assign Task</string>
     <string name="my_prescription">Employee Details</string>
     <string name="title_activity_create_appointment">CreateAppointment</string>
     <string name="title_activity_employees">employees</string>
