--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Employee Tracker</string>
+    <string name="app_name">Employee Tracking And Management System</string>
+    <string name="app_name_welcome">Welcome to Employee Tracking And Management System</string>
     <string name="title_activity_home">Home</string>
     <string name="title_activity_call_logs">Home</string>
 
